@@ -16,6 +16,7 @@
 				<Property Name='ReadOnly' Value='true'/>
 				<Property Name='VertFormatting' Value='TopAligned'/>
 				<Property Name='HorzFormatting' Value='WordWrapLeftAligned'/>
+				<Property Name='VertScrollbar' Value='true'/>
 			</Window>
 			<Window Type='EmberLook/Listbox' Name='ChildList'>
 				<Property Name='UnifiedPosition' Value='{{0,0},{0.6,0}}'/>
